# mbuild

./: .bumpversion.toml  .coveragerc  .gitignore  .landscape.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  INSTALLATION.rst  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README  README.md  README.rst  alkane_body.py  alkane_tail.py  alkanemesh.py  amorphous.xyz  appveyor.yml  azure-pipelines.yml  basesetup.py  benchmarking.ipynb  box.py  buckyballmesh.py  buckyballtile.py  changelog.md  codecov.yml  entrypoint.sh  environment-dev-win.yml  environment-dev.yml  environment-win.yml  environment.yml  (+39 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  QUESTION.md
.github/workflows/: CI.yaml  codeql.yml
_modules/: index.html
_modules/mbuild/: atom.html  bond.html  box.html  compound.html  coordinate_transform.html  mask.html  orderedset.html  packing.html  part.html  periodic_kdtree.html  polymer.html  port.html  tiled_compound.html
_sources/: installation.txt
_sources/apidoc/: mbuild.txt
_static/: tutorial_methane.ipynb
apidoc/: mbuild.html  modules.html
dev/ci-travis/: after_success.sh  install.sh
dev/conda-recipe/: bld.bat  meta.yaml
devtools/: README.md  docker-entrypoint.sh  release-pypi.sh
devtools/appveyor-ci/: install.ps1  run_with_env.cmd
docs/: Makefile  citing_mbuild.rst  conf.py  coordinate_transforms.rst  data_structures.rst  dev_env_setup.md  docker.rst  docs-env.yml  environment-docs.yml  environment.yml  example_system.rst  index.rst  indexlatex.rst  installation.rst  introduction.rst  load_data.rst  make.bat  mbuild.examples.alkane_monolayers.rst  mbuild.examples.bilayer.rst  mbuild.examples.ethane.rst  mbuild.examples.peg_monolayers.rst  mbuild.examples.rst  mbuild.formats.rst  mbuild.rst  mbuild.tools.parameterize.rst  older_documentation.rst  recipe_development.rst  recipes.rst  requirements.txt  structure_building_options.rst  tutorials.rst  units.rst  unix_setup.sh  update_gh_pages.sh  usage.rst  windows_setup.bat  writers.rst
docs/apidoc/: mbuild.rst  (+6 more)
lammps_testing/: bmim.input  in.mpc_h2o_comp
mbuild/: __init__.py  angle.py  atb_client.py  atom.py  atoms.txt  beta-cristobalite.xyz  bond.py  bond_graph.py  bond_graph.pyx  box.py  coarse_graining.py  compound.py  conformations.py  conversion.py  coordinate_transform.py  core.py  decorators.py  dihedral.py  exceptions.py  has_parts_mixin.py  hoomdxmlfile.py  lammps.py  lattice.py  load.py  mask.py  mbase.py  mbuild-polymer-example.ipynb  mbuild.py  mdio.py  mol2file.py  moleculemodel.py  mpcchainrules.py  ndimmesh.py  orderedset.py  packing.py  part.py  part_mixin.py  path.py  pattern.py  pdb_format.py  (+19 more)
mktop/: initiator.top  mktop_2.2.1.pl
notebooks/: relative-transforms.ipynb
opls_validation/: 100-41-4.top  100-42-5.top  100-47-0.top  100-51-6.top  100-52-7.top  100-66-3.top  101-84-8.top  105-37-3.top  105-53-3.top  105-58-8.top  106-44-5.top  106-93-4.top  106-94-5.top  107-06-2.top  107-07-3.top  107-10-8.top  107-12-0.top  107-13-1.top  107-15-3.top  107-31-3.top  108-03-2.top  108-05-4.top  108-18-9.top  108-20-3.top  108-24-7.top  108-39-4.top  108-75-8.top  108-83-8.top  108-88-3.top  108-89-4.top  108-91-8.top  108-94-1.top  108-95-2.top  108-98-5.top  108-99-6.top  109-06-8.top  109-65-9.top  109-69-3.top  109-73-9.top  109-79-5.top  (+112 more)
resources/: beta-cristobalite.xyz
sandbox/: alkane_body.py  alkane_body2.py  alkanemesh.py  buckyballmesh.py  ethane.py  mpcchainrules.py  onedimfill.py  twodimmesh.py
tests/: test_examples_methane.py  test_hoomdxmlfile.py  test_mbuild.py  test_mol2file.py  test_pdbfile.py
tutorials/: ethane.html  methane.html  monolayers.html  tutorials.html
wip/: __init__.py
(+1021 files in other folders)
