[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mbuild"
description = "A hierarchical, component based molecule builder."
readme = "README.md"
authors = [
  {name = "Janos Sallai", email = "janos.sallai@vanderbilt.edu"},
  {name = "Christopher Klein", email = "christoph.klein@vanderbilt.edu"},
]
maintainers = [
  {name = "Nicholas Craven", email = "nicholas.c.craven@vanderbilt.edu"},
  {name = "Chris Jones", email = "chrisjones4@u.boisestate.edu"},
]
license= {text = "MIT"}
classifiers=[
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
urls = {Homepage = "https://github.com/mosdef-hub/mbuild"}
requires-python = ">=3.10"
dynamic = ["version"]

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
mbuild = ['"utils/**"', '"lib/**"']

[tool.setuptools.dynamic]
version = {attr = "mbuild.__version__"}

[project.entry-points."mbuild.plugins"]
Alkane = "mbuild.lib.recipes.alkane:Alkane"
Monolayer = "mbuild.lib.recipes.monolayer:Monolayer"
Polymer = "mbuild.lib.recipes.polymer:Polymer"
SilicaInterface = "mbuild.lib.recipes.silica_interface:SilicaInterface"
TiledCompound = "mbuild.lib.recipes.tiled_compound:TiledCompound"
